--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -51,5 +51,8 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Isle Of Shadows.sln"
+    "dotnet.defaultSolution": "Isle Of Shadows.sln",
+    "cSpell.words": [
+        "Highlightable"
+    ]
 }
